--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gitbook-plugin-simple-mind-map": "0.2.4",
     "gitbook-plugin-sitemap-general": "^0.1.1",
     "gitbook-plugin-splitter": "0.0.8",
-    "gitbook-plugin-tbfed-pagefooter": "0.0.1"
+    "gitbook-plugin-tbfed-pagefooter": "0.0.1",
+    "gitbook-plugin-theme-api": "^1.1.2",
+    "gitbook-plugin-theme-comscore": "0.0.3"
   },
   "name": "gitbook",
   "description": "##",
